Added text for algorithms

--- a/templates/logreg.html
+++ b/templates/logreg.html
@@ -9,9 +9,9 @@
 {% endblock %}
 
 {% block graph %}
-<div id="graph" onclick='addPoint(null)'>
-    {{ graph | safe }}
-</div>
+    <div id="graph" onclick='addPoint(null)'>
+        {{ graph | safe }}
+    </div>
 {% endblock %}
 
 {% block nameOfAlgorithm %}Perform Gradient Descent{% endblock %}
@@ -46,17 +46,12 @@
 
 {% block moreInfoModalContent %}
     <h2>How Logistic Regression Works</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eu neque quis nunc ultrices lobortis a eget
-        erat. Fusce viverra neque non sapien scelerisque, quis viverra mauris lobortis. Nam eu nisl ipsum. Curabitur
-        feugiat vitae tortor eget ullamcorper. Ut ultrices dolor et leo ornare, vel rutrum orci euismod. Integer ornare
-        suscipit tristique. Mauris gravida ex condimentum varius vulputate. Mauris at suscipit tortor, vitae varius
-        nisl.</p>
+    <p>Click on the graph to add either red or blue points to it. The goal here is to draw a line, either linear or
+        quadratic, that separates the points as best as possible. Then, run the Gradient Descent algorithm to watch how
+        the computer “learns” the line of best fit. A larger number of iterations means the line will make a larger jump
+        towards converging. </p>
     <br/>
-    <p>Vestibulum lacinia eros vel urna mollis dignissim. Nunc porta imperdiet enim non pharetra. Curabitur enim
-        velit, lacinia ac massa non, iaculis porttitor dolor. In massa sem, pharetra non augue at, faucibus tempor
-        erat. Nunc
-        at volutpat risus. Nunc nisi ante, condimentum vel imperdiet sit amet, congue ac enim. Aenean feugiat pharetra
-        est ut iaculis. Donec libero libero, accumsan sed hendrerit vitae, vulputate in purus. Nulla quis justo id odio
-        sollicitudin feugiat eu quis lectus. Cras vitae dui congue, fermentum sapien sit amet, dictum mi. Curabitur id
-        ultrices tellus, in scelerisque tortor. Morbi et elit at dolor venenatis interdum a non dolor.</p>
+    <p>The way this works is for each iteration, the “error” of the line (which is the squared sum of the class of each
+        point and its predicted value) is reduced by a little bit. Eventually, the algorithm will converge when the
+        error is as small as it can be.</p>
 {% endblock %}
