--- a/templates/kmeans.html
+++ b/templates/kmeans.html
@@ -9,9 +9,9 @@
 {% endblock %}
 
 {% block graph %}
-<div id="graph" onclick='addPoint("k")'>
-    {{ graph | safe }}
-</div>
+    <div id="graph" onclick='addPoint("k")'>
+        {{ graph | safe }}
+    </div>
 {% endblock %}
 
 {% block content %}
@@ -60,17 +60,12 @@
 
 {% block moreInfoModalContent %}
     <h2>How K-Means Works</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eu neque quis nunc ultrices lobortis a eget
-        erat. Fusce viverra neque non sapien scelerisque, quis viverra mauris lobortis. Nam eu nisl ipsum. Curabitur
-        feugiat vitae tortor eget ullamcorper. Ut ultrices dolor et leo ornare, vel rutrum orci euismod. Integer ornare
-        suscipit tristique. Mauris gravida ex condimentum varius vulputate. Mauris at suscipit tortor, vitae varius
-        nisl.</p>
+    <p>Click on the graph to add points to it. Cluster the points in any manner. The goal here is to color the points
+        such that there are “k” clusters, which is a parameter that is chosen. Run the algorithm and for each iteration
+        watch how first the points are colored based on which cluster (indicated by the stars) it’s closest to and then
+        the clusters are moved to the center of all of the points of its color.</p>
     <br/>
-    <p>Vestibulum lacinia eros vel urna mollis dignissim. Nunc porta imperdiet enim non pharetra. Curabitur enim
-        velit, lacinia ac massa non, iaculis porttitor dolor. In massa sem, pharetra non augue at, faucibus tempor
-        erat. Nunc
-        at volutpat risus. Nunc nisi ante, condimentum vel imperdiet sit amet, congue ac enim. Aenean feugiat pharetra
-        est ut iaculis. Donec libero libero, accumsan sed hendrerit vitae, vulputate in purus. Nulla quis justo id odio
-        sollicitudin feugiat eu quis lectus. Cras vitae dui congue, fermentum sapien sit amet, dictum mi. Curabitur id
-        ultrices tellus, in scelerisque tortor. Morbi et elit at dolor venenatis interdum a non dolor.</p>
+    <p>This process is repeated until the algorithm converges, or the clusters stop moving. Depending on the random
+        initialization of the clusters, the final solution may not be the most optimal one, in which case feel free to
+        reinitialize the clusters and rerun the algorithm.</p>
 {% endblock %}
