--- a/templates/linreg.html
+++ b/templates/linreg.html
@@ -31,17 +31,11 @@
 
 {% block moreInfoModalContent %}
     <h2>How Linear Regression Works</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eu neque quis nunc ultrices lobortis a eget
-        erat. Fusce viverra neque non sapien scelerisque, quis viverra mauris lobortis. Nam eu nisl ipsum. Curabitur
-        feugiat vitae tortor eget ullamcorper. Ut ultrices dolor et leo ornare, vel rutrum orci euismod. Integer ornare
-        suscipit tristique. Mauris gravida ex condimentum varius vulputate. Mauris at suscipit tortor, vitae varius
-        nisl.</p>
+    <p>Click on the graph to add points to it. The goal is to draw a line that best fits the given data, whether is
+        linear or quadratic. Then, run the Gradient Descent algorithm to watch how the computer “learns” the line of
+        best fit. A larger number of iterations means the line will make a larger jump towards converging. </p>
     <br/>
-    <p>Vestibulum lacinia eros vel urna mollis dignissim. Nunc porta imperdiet enim non pharetra. Curabitur enim
-        velit, lacinia ac massa non, iaculis porttitor dolor. In massa sem, pharetra non augue at, faucibus tempor
-        erat. Nunc
-        at volutpat risus. Nunc nisi ante, condimentum vel imperdiet sit amet, congue ac enim. Aenean feugiat pharetra
-        est ut iaculis. Donec libero libero, accumsan sed hendrerit vitae, vulputate in purus. Nulla quis justo id odio
-        sollicitudin feugiat eu quis lectus. Cras vitae dui congue, fermentum sapien sit amet, dictum mi. Curabitur id
-        ultrices tellus, in scelerisque tortor. Morbi et elit at dolor venenatis interdum a non dolor.</p>
+    <p>The way this works is for each iteration, the “error” of the line (which is the squared sum of the distance
+        between each point and its predicted value indicated by the line) is reduced by a little bit. Eventually, the
+        algorithm will converge when the error is as small as it can be.</p>
 {% endblock %}
