Fixed several bugs

--- a/templates/gdBase.html
+++ b/templates/gdBase.html
@@ -7,7 +7,7 @@
 </div>
 
 <div id='info'>
-    <p id='converged'>Run gradient descent until convergence</p>
+    <p id='converged'>Click on the graph to add data points</p>
     <br/>
 
     <p>Degree of line: </p>
