--- a/templates/kmeans.html
+++ b/templates/kmeans.html
@@ -28,7 +28,7 @@
     </div>
 
     <div id='info'>
-        <p id='converged'>Run K-Means until convergence</p>
+        <p id='converged'>Click on the graph to add data points</p>
         <br/>
 
         <p>Number of Clusters:</p>
