--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,8 +4,9 @@
 
 body {
     max-width: 1440px;
+    width: 100%;
     position: relative;
-    margin: auto;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
