Added chart js functionality for linear regression

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
             integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
             crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.4.0/chart.min.js"></script>
     <link rel="shortcut icon" href="/static/favicon.ico">
 </head>
 <body>
@@ -47,3 +48,4 @@
 </html>
 
 <script src="/static/js/script.js"></script>
+<script src="/static/js/chartjs.js"></script>
