--- a/templates/linreg.html
+++ b/templates/linreg.html
@@ -9,8 +9,9 @@
 {% endblock %}
 
 {% block graph %}
-    <div id="graph" onclick='addPoint("r")'>
-        {{ graph | safe }}
+{#    <div id="graph" onclick='addPoint("r")'>#}
+    <div id="graph">
+        <canvas id="myChart" width="500" height="500"></canvas>
     </div>
 {% endblock %}
 
