Cleaned up some code for Logistic Regression

--- a/templates/logreg.html
+++ b/templates/logreg.html
@@ -22,11 +22,11 @@
 {% block chooseClass %}
     <p>Choose class: </p>
     <div>
-        <input type="radio" id="red" name="class" value="r" checked>
+        <input type="radio" id="red" name="class" value="0" checked>
         <label for="male">red</label>
     </div>
     <div>
-        <input type="radio" id="blue" name="class" value="b">
+        <input type="radio" id="blue" name="class" value="1">
         <label for="female">blue</label>
     </div>
     <br/>
