--- a/templates/kmeans.html
+++ b/templates/kmeans.html
@@ -9,9 +9,6 @@
 {% endblock %}
 
 {% block graph %}
-    {#    <div id="graph" onclick='addPoint("k")'>#}
-    {#        {{ graph | safe }}#}
-    {#    </div>#}
     <div id="graph">
         <canvas id="myChart" width="500" height="500"></canvas>
     </div>
@@ -25,7 +22,7 @@
                 <button onclick="kMeans(1)">1 iteration</button>
                 <button onclick="kMeans(100_000)">Until convergence</button>
                 <button onclick="reinitializeCentroids()">Reinitialize centroids</button>
-                <button onclick="location.reload()">Clear</button>
+                <button onclick="location.reload()">Reset</button>
             </div>
         {% endblock %}
     </div>
