--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,16 @@
     <title>ML Visualization Suite</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/static/css/style.css">
 </head>
 <body>
+<div class="menu-links">
+    <a href="/">Home</a>
+    <a href="https://www.sourish.dev">About the Creator</a>
+</div>
 <h1>Machine Learning Algorithm Visualizations</h1>
+<p>Click one to see it in action!</p>
+<br>
 <div class="cards">
 
 </div>
