--- a/templates/kmeans.html
+++ b/templates/kmeans.html
@@ -59,7 +59,7 @@
 {% endblock %}
 
 {% block moreInfoModalContent %}
-    <h2>How K-Means Works</h2>
+    <h2 class="modal-title">How K-Means Works</h2>
     <p>Click on the graph to add points to it. Cluster the points in any manner. The goal here is to color the points
         such that there are “k” clusters, which is a parameter that is chosen. Run the algorithm and for each iteration
         watch how first the points are colored based on which cluster (indicated by the stars) it’s closest to and then
