--- a/templates/linreg.html
+++ b/templates/linreg.html
@@ -30,7 +30,7 @@
 {% endblock %}
 
 {% block moreInfoModalContent %}
-    <h2>How Linear Regression Works</h2>
+    <h2 class="modal-title">How Linear Regression Works</h2>
     <p>Click on the graph to add points to it. The goal is to draw a line that best fits the given data, whether is
         linear or quadratic. Then, run the Gradient Descent algorithm to watch how the computer “learns” the line of
         best fit. A larger number of iterations means the line will make a larger jump towards converging. </p>
