--- a/templates/logreg.html
+++ b/templates/logreg.html
@@ -45,7 +45,7 @@
 {% endblock %}
 
 {% block moreInfoModalContent %}
-    <h2>How Logistic Regression Works</h2>
+    <h2 class="modal-title">How Logistic Regression Works</h2>
     <p>Click on the graph to add either red or blue points to it. The goal here is to draw a line, either linear or
         quadratic, that separates the points as best as possible. Then, run the Gradient Descent algorithm to watch how
         the computer “learns” the line of best fit. A larger number of iterations means the line will make a larger jump
