Optimized index.html for mobile

--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/static/css/style.css">
@@ -39,9 +42,6 @@
         <span id="modal-close">&times;</span>
     </div>
 </div>
-
-
-
 
 </body>
 </html>
