--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,6 +10,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    background: #f5f5f5;
 }
 
 .card h2 {
@@ -53,6 +54,11 @@ p {
     margin: 0;
 }
 
+#graph {
+    max-width: 500px;
+    width: 100vw;
+}
+
 #figure {
     display: flex;
     justify-content: center;
@@ -76,10 +82,9 @@ p {
     position: absolute;
     height: 200px;
     width: 400px;
-    left: 50%;
+    right: 0;
     margin-left: 350px;
     top: 200px;
-
     display: flex;
     flex-direction: column;
     align-items: center;
