--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
     <title>ML Visualization Suite</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap" rel="stylesheet">
@@ -14,7 +17,6 @@
 </div>
 <h1>Machine Learning Algorithm Visualizations</h1>
 <p>Click one to see it in action!</p>
-<br>
 <div class="cards">
 
 </div>
@@ -51,15 +53,22 @@
 <style>
     * {
         font-family: 'Roboto', sans-serif;
+
+    }
+
+    body {
+        background: #f5f5f5;
     }
 
     h1 {
+        margin-top: 5px;
         text-align: center;
     }
 
     .cards {
         display: flex;
         justify-content: center;
+        flex-wrap: wrap;
     }
 
     .card {
@@ -68,6 +77,11 @@
         flex-direction: column;
         align-items: center;
         cursor: pointer;
+        margin: 10px;
+        padding: 10px;
+        box-shadow: 0 0 5px grey;
+        border-radius: 10px;
+        background: white;
     }
 
     img {
@@ -81,5 +95,11 @@
     .ml-button {
         display: block;
         margin: auto;
+    }
+
+    @media only screen and (max-width: 1080px) {
+        h1 {
+            margin-top: 50px;
+        }
     }
 </style>
