--- a/static/css/style.css
+++ b/static/css/style.css
@@ -56,7 +56,7 @@ p {
 
 #graph {
     max-width: 500px;
-    width: 100vw;
+    width: 75vw;
 }
 
 #figure {
@@ -82,7 +82,7 @@ p {
     position: absolute;
     height: 200px;
     width: 400px;
-    right: 0;
+    right: 5px;
     margin-left: 350px;
     top: 200px;
     display: flex;
