--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
     <a href="https://www.sourish.dev">About the Creator</a>
 </div>
 <h1>Machine Learning Algorithm Visualizations</h1>
-<p>Click one to see it in action!</p>
+<p style="text-align: center">Click one to see it in action!</p>
 <div class="cards">
 
 </div>
