--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,8 +9,51 @@ body {
     margin: 0 auto;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    /*align-items: center;*/
     background: #f5f5f5;
+    height: 95vh;
+}
+
+.hamburger-icon {
+    display: none;
+}
+
+.mobile-sidebar-nav {
+    display: flex;
+    flex-direction: column;
+    width: 0;
+    height: 95%;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    right: 0;
+    background-color: #222;
+    overflow-x: hidden;
+    padding-top: 60px;
+    transition: 0.5s;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    white-space: nowrap;
+    color: white;
+}
+
+.mobile-sidebar-nav a {
+    color: white;
+    text-decoration: none;
+    font-size: 1.75rem;
+    padding: 10px;
+}
+
+.mobile-sidebar-nav a:hover,
+.mobile-sidebar-nav a:active {
+    background-color: #FFF;
+    color: #000;
+}
+
+.close-sidebar-nav {
+    position: absolute;
+    top: 10px;
+    left: 10px;
 }
 
 .card h2 {
@@ -26,27 +69,27 @@ body {
     top: 0;
     right: 0;
     margin: 10px 10px 0 0;
-
 }
 
 .menu-links a {
     margin-left: 10px;
 }
 
+/*.menu-links-other-algos {*/
+/*    display: none;*/
+/*}*/
+
 h1 {
     text-align: center;
     margin: 25px 0 0 0;
-    /*display: block;*/
 }
 
 a {
     text-decoration: none;
 }
 
-a:link,
-a:visited,
-a:hover,
-a:active {
+.algoLinks a,
+.menu-links a{
     color: black;
 }
 
@@ -54,9 +97,22 @@ p {
     margin: 0;
 }
 
+.row {
+    display: flex;
+    justify-content: space-around;
+}
+
+.centerpiece {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 500px;
+    /*width: 100vw;*/
+    margin: 0 auto;
+}
+
 #graph {
-    max-width: 500px;
-    width: 75vw;
+    width: 100%;
 }
 
 #figure {
@@ -72,18 +128,20 @@ p {
     display: flex;
     justify-content: center;
     margin-bottom: 10px;
+    flex-wrap: wrap;
 }
 
 #iter_buttons button {
-    margin: 0 5px;
+    margin: 5px;
 }
 
 #info {
     position: absolute;
     height: 200px;
-    width: 400px;
-    right: 5px;
-    margin-left: 350px;
+    /*width: 400px;*/
+    width: auto;
+    right: 10px;
+    /*margin-left: 350px;*/
     top: 200px;
     display: flex;
     flex-direction: column;
@@ -125,7 +183,8 @@ p {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 720px;
+    max-width: 720px;
+    width: 75vw;
     /*height: 480px;*/
     border-radius: 10px;
     box-shadow: black 1px 1px 10px;
