--- a/templates/kmeans.html
+++ b/templates/kmeans.html
@@ -26,7 +26,9 @@
             </div>
         {% endblock %}
     </div>
+{% endblock %}
 
+{% block info %}
     <div id='info'>
         <p id='converged'>Click on the graph to add data points</p>
         <br/>
