Resized graph on mobile

--- a/static/css/queries.css
+++ b/static/css/queries.css
@@ -36,7 +36,8 @@
     }
 
     .centerpiece {
-        width: 50vw;
+        width: 75vw;
+        max-width: 300px;
         margin: 0 auto;
     }
 
